[package]
name = "usdr"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/usdr-lib-rs"
description = "Rust bindings to the USDR software-defined-radio library (cxx/FFI)."
readme = "README.md"

[dependencies]
cxx = "1.0.194"
num-complex = "0.4.6"

[build-dependencies]
cxx-build = "1.0.194"
